[gd_scene load_steps=30 format=3 uid="uid://cyd52m0kr135o"]

[ext_resource type="Script" path="res://Chapters/Chapter 1/Scripts/regex_sprite.gd" id="1_2hvlw"]
[ext_resource type="Texture2D" uid="uid://svy24eqpwx5u" path="res://Chapters/Chapter 1/Sprite/Red Hooded/AnimationSheet_Character.png" id="2_lk2dd"]
[ext_resource type="FontFile" uid="uid://b4lue4d84htb2" path="res://Fonts/child-witch-font/ChildWitch-z8ABL.ttf" id="4_y6k7y"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="5_ousdc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rk2ee"]
atlas = ExtResource("2_lk2dd")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwfuu"]
atlas = ExtResource("2_lk2dd")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cv17"]
atlas = ExtResource("2_lk2dd")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dkty"]
atlas = ExtResource("2_lk2dd")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0xmv"]
atlas = ExtResource("2_lk2dd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u185m"]
atlas = ExtResource("2_lk2dd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxt6q"]
atlas = ExtResource("2_lk2dd")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f42cn"]
atlas = ExtResource("2_lk2dd")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dl22"]
atlas = ExtResource("2_lk2dd")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb7ay"]
atlas = ExtResource("2_lk2dd")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4rpj"]
atlas = ExtResource("2_lk2dd")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyfqs"]
atlas = ExtResource("2_lk2dd")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci30w"]
atlas = ExtResource("2_lk2dd")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbvtc"]
atlas = ExtResource("2_lk2dd")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_853k8"]
atlas = ExtResource("2_lk2dd")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgbla"]
atlas = ExtResource("2_lk2dd")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3hxm"]
atlas = ExtResource("2_lk2dd")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iny8"]
atlas = ExtResource("2_lk2dd")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t35lr"]
atlas = ExtResource("2_lk2dd")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5kr2"]
atlas = ExtResource("2_lk2dd")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwlhv"]
atlas = ExtResource("2_lk2dd")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjynq"]
atlas = ExtResource("2_lk2dd")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_klort"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk2ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwfuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cv17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dkty")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0xmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u185m")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxt6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f42cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dl22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb7ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4rpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyfqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci30w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbvtc")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_853k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgbla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3hxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iny8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t35lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5kr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwlhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjynq")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hegce"]
radius = 8.5

[sub_resource type="CircleShape2D" id="CircleShape2D_a08na"]
radius = 28.1603

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_2hvlw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
texture_repeat = 2
sprite_frames = SubResource("SpriteFrames_klort")
animation = &"Hurt"
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
shape = SubResource("CapsuleShape2D_hegce")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, -27)
scale = Vector2(-0.0337744, 293.224)
zoom = Vector2(6, 6)

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("5_ousdc")

[node name="Interaction Component" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="Interaction Component"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Component/InteractionArea"]
shape = SubResource("CircleShape2D_a08na")

[node name="InteractLabel" type="Label" parent="Interaction Component/InteractionArea"]
offset_left = -25.0
offset_top = -24.0
offset_right = 973.0
offset_bottom = 90.0
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("4_y6k7y")
theme_override_font_sizes/font_size = 120
text = "PRESS E TO INTERACT"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="Interaction Component/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Component/InteractionArea" to="." method="_on_interaction_area_area_exited"]
